heading enhancement and fixed alignment

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -25,7 +25,8 @@
     font-size: 1rem;
     font-family: Gill Sans, sans-serif;
     font-weight: bold;
-    margin-left: 15px;
+    margin-left: 10px;
+    max-width: 250px;
    
   }
 .branding
